# laifu

./: .gitattributes  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: README.md  desktop-release.yml  gateway-deploy.yml  hermes-image.yml
apps/desktop/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.canary.json  tauri.conf.dev.json  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/capabilities/: default.json  home-remote.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: app-commands.toml  download-cloud-file.toml  open-oauth-in-browser.toml  show-settings-window-from-home.toml  show-sync-flyout-from-home.toml
apps/desktop/src-tauri/src/: channel.rs  contracts.rs  gateway.rs  lib.rs  main.rs  persist.rs  sas.rs  state.rs  window_state.rs
apps/desktop/src-tauri/src/app/: auth_commands.rs  core.rs  mod.rs  surfaces.rs  sync_commands.rs  tasks.rs  window.rs
apps/desktop/src-tauri/src/auth/: keychain.rs  mod.rs  refresh.rs
apps/desktop/src-tauri/src/sync/: engine.rs  location.rs  mod.rs  poller.rs  rclone_config.rs  watcher.rs
apps/gateway/: .env.example  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/stub-container/: README.md  package.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docker/: README.md
docker/hermes/: .dockerignore  .env.example  Dockerfile  README.md  build-and-push.sh  entrypoint.sh  hermes-config.yaml  lingxi.sh  package.json  server.py  tsconfig.json
docs/: architecture.md  auth-setup.md  deployment-azure-first-run.md  deployment.md  desktop-app.md  environments.md  known-issues.md  log.md  managed-prompts.md  nfs.md  observability.md
docs/prototype/: _c.py  _check.js  _m.js  agentos-macos.html  agentos-prototype.html
docs/todo/: github.md  internal-net.md  secret-rotation.md  user-data-sync.md  weichat-file-impl.md
infra/: README.md  prod-domain-email-cutover.md  resend-dns-records.md
scripts/: admin-balance.ts  build-deploy.sh  check-kv-secret-drift.ts  desktop-version.mjs  dev-check.mjs  dev-check.sh  dev-db.sh  dev-hermes.mjs  dev-hermes.sh  fetch-rclone.mjs  fetch-rclone.sh  gen-deploy-pkg.mjs  rollout-hermes.sh  seed-kv-secrets.ts  smoke-rclone-sas.ts  verify-cloud-sas.ts
(+416 files in other folders)
